Project

General

Profile

Actions

Bug #24167

closed

Module 'balancer' has failed: could not find bucket -14

Added by Sage Weil almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

crushmap may contain choose_args for deleted buckets

            {
                "bucket_id": -14,
                "weight_set": [
                    []
                ]
            },

in teh choose_args section, but bucket -14 doesn't exist. THis is because it used to exist when the weight-set was created, but then was deleted, and the choose_args weights are still there.

Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #24213: mimic: Module 'balancer' has failed: could not find bucket -14ResolvedSage WeilActions
Copied to RADOS - Backport #24214: luminous: Module 'balancer' has failed: could not find bucket -14ResolvedPrashant DActions
Actions #1

Updated by Sage Weil almost 6 years ago

It looks like we also don't create weight-sets for new buckets. And if you create buckets and move things into them and try to set the weight-set weight on them you get something like

gnit:build (wip-24167) 05:08 PM $ bin/ceph osd crush weight-set reweight-compat osd.0 1.0
Error ENOENT: no weight-set for bucket -5no weight-set for bucket -6no weight-set for bucket -7no weight-set for bucket -8item 0 not found in crush map
Actions #2

Updated by Sage Weil almost 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Sage Weil almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to mimic,luminous
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24213: mimic: Module 'balancer' has failed: could not find bucket -14 added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24214: luminous: Module 'balancer' has failed: could not find bucket -14 added
Actions #7

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF